added knn with image and sound example

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       - 03_videoClassification.js
       - 04_word2vec.js
       - 05_KNNClassifier.js
+      - 06_KNNClassifier_with_sound_image
    -->
 </body>
 
